Change "Herb run" to "Farm" run + better UX on configuration